--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     ]
   },
   "dependencies": {
-    "react-redux": "^9.2.0",
-    "redux": "^5.0.1"
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.2"
   }
 }
